# elastic-agent-builder-hackathon

./: .env.example  .gitignore  DEMO_SCRIPT.md  LICENSE  README.md  SOCIAL_POST.md  SUBMISSION.md  deploy-vercel.mjs  next.config.js  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json
.github/workflows/: ci.yml
.vercel/: project.json
app/: layout.tsx  page.tsx  providers.tsx
backend/: __init__.py  config.py  elastic_client.py
backend/definitions/: __init__.py  agents.py  sample_data.py  tools.py
dashboard/: package.json  tailwind.config.ts
data/: .gitkeep
docs/: agent-builder-notes.md  architecture.md
incident_commander/: __init__.py  agents.py  cli.py  config.py  elastic_client.py  sample_data.py  tools.py
scripts/: check_connection.py  ingest_data.py  setup.sh  setup_agent.py
src/: __init__.py  agent_builder.py  cli.py  config.py  data_loader.py  elastic_client.py  setup_agent.py  utils.py
src/agent_builder/: __init__.py  a2a.py  cli.py  client.py  config.py  elastic_client.py  esql.py  kibana_api.py  mcp.py  workflows.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AgentPanel.tsx  DemoControls.tsx  Header.tsx  IncidentTimeline.tsx  MTTRComparison.tsx  MetricsDashboard.tsx  MetricsGrid.tsx  RecentIncidents.tsx
src/data/: scenario.ts
src/hooks/: useDemo.ts
src/incident_commander/: __init__.py  agents.py  cli.py  config.py  elastic_client.py  orchestrator.py  provisioner.py  tools.py
tests/: test_agents.py  test_cli.py  test_config.py  test_data_loader.py  test_elastic_client.py  test_tools.py
(+14 files in other folders)
